fix: fix layout bug of picker holder when hidden

--- a/src/common/atoms/pickadate.scss
+++ b/src/common/atoms/pickadate.scss
@@ -5,3 +5,8 @@
     }
   }
 }
+
+// Remove picker__holder when hidden
+.picker__holder {
+  transform: translateX(100%);
+}
